// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerManager handleError should render error 1`] = `
<Wrapper
  account={
    Object {
      "_id": "a87f9a8bd3884479a48811e7b7deec75",
      "account_type": "konnectest",
      "auth": Object {
        "passphrase": "bar",
        "username": "foo",
      },
      "identifier": "username",
    }
  }
  error={[Error: Test error]}
  konnector={
    Object {
      "fields": Object {
        "passphrase": Object {
          "type": "password",
        },
        "username": Object {
          "type": "text",
        },
      },
      "slug": "konnectest",
    }
  }
  onSubmit={[Function]}
/>
`;

exports[`TriggerManager should render with account 1`] = `
<Wrapper
  account={
    Object {
      "_id": "a87f9a8bd3884479a48811e7b7deec75",
      "account_type": "konnectest",
      "auth": Object {
        "passphrase": "bar",
        "username": "foo",
      },
      "identifier": "username",
    }
  }
  error={null}
  konnector={
    Object {
      "fields": Object {
        "passphrase": Object {
          "type": "password",
        },
        "username": Object {
          "type": "text",
        },
      },
      "slug": "konnectest",
    }
  }
  onSubmit={[Function]}
/>
`;

exports[`TriggerManager should render without account 1`] = `
<Wrapper
  error={null}
  konnector={
    Object {
      "fields": Object {
        "passphrase": Object {
          "type": "password",
        },
        "username": Object {
          "type": "text",
        },
      },
      "slug": "konnectest",
    }
  }
  onSubmit={[Function]}
/>
`;
